# battle-tanks

./: .gitignore  README.md  export_presets.cfg  project.godot
docs/: README.md  index.html
docs/demo/: battletanks.html  battletanks.js  battletanks.pck  libbattletanks.javascript.wasm
environment/sky_gradient/: sky_gradient.material  sky_gradient.shader  sky_gradient.tscn
landscape/: chunk_body_2d.gdns  chunk_body_2d.tscn
landscape/green_hills/: ground.png.import  ground.tscn  tree.png.import  tree.tscn  well.png.import  well.tscn  windmill.png.import  windmill.tscn  windmill_wings.png.import  windmill_wings.tscn
levels/sandbox/: sandbox.tscn
lib/: battletanks.gdnlib
native/: CMakeLists.txt  README.md
native/cmake/: FindGodotCpp.cmake
native/src/: CMakeLists.txt  ChunkBody2D.cpp  ChunkBody2D.hpp  DrawCache.cpp  DrawCache.hpp  main.cpp
singletons/debug/: debug.gd  debug.tscn
singletons/interface/: fire.png.import  interface.tscn  pedal.png.import  rotate.png.import
skies/sky_gradient/: sky_gradient.material  sky_gradient.tscn
stages/sandbox/: sandbox.gd  sandbox.tscn
units/state_machine/: state_machine.gd
units/tank/: barrel.png.import  body.png.import  states.gd  tank.gd  tank.tscn  track.png.import  trajectory.gd  trajectory.png.import  trajectory.shader  trajectory.tres  wheel.gd
